[gd_scene load_steps=3 format=3 uid="uid://dvp75ok5aja6f"]

[ext_resource type="Script" uid="uid://bggetkgqfnl70" path="res://addons/gdshader/shader_card.gd" id="1_ft4r7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ft4r7"]
bg_color = Color(0.096204735, 0.09620475, 0.096204735, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ShaderCard" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ft4r7")
script = ExtResource("1_ft4r7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainerInfo" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ImagePreview" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainerInfo"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
expand_mode = 2
stretch_mode = 6

[node name="InfoVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainerInfo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="TitleLabel" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainerInfo/InfoVBox"]
layout_mode = 2
text = "Shader Name Placeholder"

[node name="AuthorLabel" type="LinkButton" parent="MarginContainer/VBoxContainer/HBoxContainerInfo/InfoVBox"]
layout_mode = 2
text = "by AuthorName"

[node name="HBoxContainerBtns" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ViewButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerBtns"]
layout_mode = 2
text = "View Code"

[node name="DownloadButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainerBtns"]
layout_mode = 2
text = "Download"
